--- a/newAccountEmailV2.html
+++ b/newAccountEmailV2.html
@@ -891,7 +891,7 @@ body.outlook p {
                       <tr>
                         <td class="float-right" align="center" valign="top">
                           <a href="https://${subdomain}.quadio.com"><img src="https://ci3.googleusercontent.com/proxy/9jnfmr09iqSNP3lZ9gerbn_QN_-59jlycULX6CGKHsqQmaP59xogvepI_uwRIuT2hYKDjqYvOixNPu3_EPvh9QHHQYWxnsyLwpuJJUUTzZtD5vT_rN7JBd9T_moWK5VMTI3Sm5XQYfpgcv5AVPfSIK1Kw8CkTTqfng=s0-d-e1-ft#https://userimg-bee.customeriomail.com/images/client-env-89654/PressPlaySymbol_White-OnTransparent.png" width="56px" class="float-right" alt="quadio logo"></a>
-                          <a href="https://${subdomain}.quadio.com"><img src="https://${subdomain}.images.quadio.com/static/new_account.png" class="float-center" alt="header" style="padding-bottom: 8px;"></a>
+                          <a href="https://${subdomain}.quadio.com"><img src="https://staging.images.quadio.com/static/new_account.png" class="float-center" alt="header" style="padding-bottom: 8px;"></a>
                           <img src="https://ci6.googleusercontent.com/proxy/oofPEfMAlCkD72yHj7e4UGUKuYV2hPwaZg2T5S3KEkgNBcbag6xjFhhEp0BKXwOAiughdeYSQHQ7rWGj6tEMzdmB8G940XB-Gp2MUvtROad2UWptjRK9M1GLwK0xb1O2aiFtGyYNlryZXYI=s0-d-e1-ft#https://userimg-bee.customeriomail.com/images/client-env-89654/Make%20Music%20Header.png" class="float-center" alt="make music">
                         </td>
                       </tr>
@@ -929,7 +929,7 @@ body.outlook p {
                         </tr>
                         <tr>
                           <td class="float-center" align="center">
-                            <a href="https://${subdomain}.quadio.com/complete-new-password"><img height="48px" class="float-center" src="https://${subdomain}.images.quadio.com/static/claim_account.png" alt="login button" /></a>
+                            <a href="https://${subdomain}.quadio.com/complete-new-password"><img height="48px" class="float-center" src="https://staging.images.quadio.com/static/claim_account.png" alt="login button" /></a>
                           </td>
                         </tr>
                       </tbody>
